# catan_metrics

./: .dockerignore  .gitignore  CAPSTONE_LAB_GUIDE.md  Dockerfile  README.md  docker-compose.yml  game.db  pyproject.toml
capstone/: README.md  appendix-hex-math.md  appendix-reading.md  appendix-rules.md  grading-rubric.md  phase-0-setup.md  phase-1-domain.md  phase-2-engine.md  phase-3-persistence.md  phase-4-cli.md  phase-5-api.md  phase-6-frontend.md  phase-7-metrics.md  phase-8-testing.md  phase-9-polish.md
capstone-labs/: README.md  appendix-hex-math.md  appendix-reading.md  appendix-rules.md  grading-rubric.md  lab-0-setup.md  lab-1-domain.md  lab-2-engine.md  lab-3-persistence.md  lab-4-cli.md  lab-5-api.md  lab-6-frontend.md  lab-7-metrics.md  lab-8-testing.md  lab-9-polish.md
catan/: __init__.py
catan/api/: __init__.py  app.py
catan/cli/: __init__.py  main.py  parser.py  render.py
catan/domain/: __init__.py  board.py  commands.py  constants.py  events.py  geometry.py  state.py
catan/engine/: __init__.py  awards.py  projections.py  reduce.py  validate.py
catan/store/: __init__.py  codec.py  event_store.py  (+1 more)
docs/: api.md  architecture.md  cli.md  domain-model.md  engine.md  persistence.md  web.md
tests/: test_api.py  test_awards.py  test_board.py  test_cli.py  test_geometry.py  test_modes.py  test_projections.py  test_reduce.py  test_store.py  test_validate.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+24 files in other folders)
