[project]
name = "catan-metrics"
version = "0.1.0"
description = "Companion engine for tracking metrics during a physical game of Catan."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
catan = "catan.cli.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["catan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
